<resources>
    <string name="app_name">Android Client</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- labels Activity  Login -->
    <string name="label_btn_login">Iniciar Sesión</string>
    <string name="label_btn_sigin">Registrarse</string>
    <string name="label_btn_show_db">Mostrar BD</string>
    <!-- lables menu home  -->
    <string name="action_perfil">Perfil</string>
    <string name="section_format">Post %1$d</string>
    <!-- lables tags  -->
    <string name="tab_text_home">Home</string>
    <string name="tab_text_java">Java</string>
    <string name="tab_text_android">Android</string>
    <!-- lables usurio form  -->
    <string name="label_usuario_title_form">Información Usuario</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <!-- lables post form  -->
    <string name="label_post_title_form">Información Post</string>
    <string name="label_titulo">Titulo</string>
    <string name="label_resumen">Resumen</string>
    <string name="label_contenido">Contenido</string>
    <!-- lables comentario form  -->
    <string name="label_comentario_title_form">Información Comentario</string>
    <!-- generic labels forms -->
    <string name="label_insert">Agregar</string>
    <string name="label_update">Actualizar</string>
    <string name="label_delete">Eliminar</string>
    <!-- Database labels -->
    <string name="label_title_usuario">Usuarios</string>
    <string name="label_title_post">Post</string>
    <string name="label_title_comentarios">Comentarios</string>

</resources>
