<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShowDB">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/button_intern_padding_vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Style_title"
                android:text="@string/label_title_usuario"/>

            <TextView
                android:id="@+id/xtxShowUsuarios"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Style_title"
                android:text="@string/label_title_post"/>

            <TextView
                android:id="@+id/xtxShowPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Style_title"
                android:text="@string/label_title_comentarios"/>

            <TextView
                android:id="@+id/xtxShowComentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>